--- a/templates/hosts.j2
+++ b/templates/hosts.j2
@@ -6,9 +6,9 @@
 # Hosts from ansible hosts file
 {% for host in groups['all'] %}
 {% if hostvars[host].int_ip_addr is defined %}
-{{ hostvars[host].int_ip_addr }} {{ host }}.{{ intDomain }}.{{ siteDomain }} {{ host }}
+{{ hostvars[host].int_ip_addr }} {{ hostvars[host].inventory_hostname_short }}.{{ intDomain }}.{{ siteDomain }} {{ hostvars[host].inventory_hostname_short }}
 {% endif %}
 {% if hostvars[host].ib_ip_addr is defined %}
-{{ hostvars[host]['int_ip_addr'] }} {{ host }}-ib.{{ intDomain }}.{{ siteDomain }} {{ host }}-ib
+{{ hostvars[host]['int_ip_addr'] }} {{ hostvars[host].inventory_hostname_short }}-ib.{{ intDomain }}.{{ siteDomain }} {{ hostvars[host].inventory_hostname_short }}-ib
 {% endif %}
 {% endfor %}
